# docgen

./: .gitignore  README.md  config.yaml.example  pyproject.toml
src/docgen/: analyzer.py  cli.py  config.py  generator.py  op_analyzer.py  outline.py  scanner.py  writer.py
